--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,12 @@
 spring:
+  profiles:
+    active: dev
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url:
-    username:
-    password:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: update`
       use-new-id-generator-mappings: false
     properties:
       hibernate:
