--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,5 +1,5 @@
 spring:
   datasource:
-    url:
-    username:
-    password:
+    url: jdbc:mysql://125.133.34.224:3306/test
+    username: dice
+    password: qwer1234!@
