--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,8 +13,11 @@ spring:
         format_sql: true
 
 springdoc:
+  paths-to-exclude: /swagger-resources/**, /v3/**, /v2/**
   swagger-ui:
-    path: /swagger-ui.html
+    operationsSorter: method
+  api-docs:
+    path: /v3/api-docs/swagger-config
 
 
 logging:
