fix : Swagger Error

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 spring:
   profiles:
     active: dev
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
@@ -33,4 +36,4 @@ skip:
   resources: /api/**, /api/health/**, /api/auth/**, /h2-console/**,/v3/api-docs,/v3/api-docs/**,/swagger-ui/**,/v2/api-docs/**,/swagger-ui/index.html
 
 server:
-  port: 8080
+  port: 9000
