--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,3 @@
-buildscript {
-    ext {
-        queryDslVersion = "5.0.0"
-    }
-}
-
 plugins {
     id 'java'
     id 'org.springframework.boot' version '2.7.9'
@@ -29,24 +23,37 @@ repositories {
 }
 
 dependencies {
+    // ** Spring
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-log4j2'
     implementation 'org.springframework.boot:spring-boot-starter-aop'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // ** JSON
     implementation group: 'commons-codec', name: 'commons-codec', version: '1.15'
+
+    // ** Swagger UI
     implementation 'org.springdoc:springdoc-openapi-ui:1.6.6'
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
+
+    // ** JWT
     implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
     implementation 'org.json:json:20210307'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
-    implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
-    implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
+
+    // ** Querydsl
+    implementation "com.querydsl:querydsl-jpa: '5.0.0'"
+    implementation "com.querydsl:querydsl-apt: '5.0.0'"
+
+    // ** Lombok
     compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // ** MySQL
+    runtimeOnly 'com.mysql:mysql-connector-j'
 }
 def querydslDir = "$buildDir/generated/querydsl"
 
