--- a/build.gradle
+++ b/build.gradle
@@ -45,8 +45,8 @@ dependencies {
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
 
     // ** Querydsl
-    implementation "com.querydsl:querydsl-jpa: '5.0.0'"
-    implementation "com.querydsl:querydsl-apt: '5.0.0'"
+    implementation "com.querydsl:querydsl-jpa:5.0.0"
+    implementation "com.querydsl:querydsl-apt:5.0.0"
 
     // ** Lombok
     compileOnly 'org.projectlombok:lombok'
